# prisma

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  ROADMAP.md  index.html  latest.json  make-installer-art.mjs  make-logo.mjs  package-lock.json  package.json
branding/: cascade.mjs  kit.mjs
docs/: INTEGRATION.md
src/: App.css  App.tsx  AssetCard.tsx  AssetRow.tsx  AudioPlayer.tsx  BatchRename.tsx  Coachmark.tsx  ColorPlanCard.tsx  CommandPalette.tsx  CompareModal.tsx  ConfirmModal.tsx  ContactSheetModal.tsx  ContextMenu.tsx  CropModal.tsx  CstCard.tsx  DownloadModal.tsx  DupModal.tsx  Encoder.tsx  ErrorBoundary.tsx  FixConfirm.tsx  FolderTree.tsx  HealthCard.tsx  Histogram.tsx  Icons.tsx  Inspector.tsx  Logo.tsx  Markup.tsx  Menu.tsx  MiniPlayer.tsx  Moodboard.tsx  Oficina.tsx  Preview.tsx  PreviewWindow.tsx  QRModal.tsx  Relink.tsx  Settings.tsx  SmartBuilder.tsx  TrafficLights.tsx  UpdateBanner.tsx  VideoPlayer.tsx  (+16 more)
src-tauri/: Cargo.toml  prisma-update.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  bgremove.rs  classify.rs  clip.rs  db.rs  dbpool.rs  ecosystem.rs  extras.rs  features.rs  indexer.rs  inpaint.rs  jobs.rs  lib.rs  main.rs  mediainfo.rs  nle.rs  oficina.rs  sys.rs  thumbs.rs  vault.rs  watcher.rs
