[package]
name = "prisma"
version = "0.1.0"
description = "PRISMA - Biblioteca de assets de mídia"
authors = ["Paulo Batista"]
edition = "2021"

[lib]
name = "prisma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-drag = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
image = "0.25"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
base64 = "0.22"
notify = "6"

[profile.release]
strip = true
lto = "thin"
